--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -6,4 +6,9 @@
 <body>
   <p>Moon Bootz (TM) is not responsible for anything that happens to you while wearing their product. Ever. You might want to invest in a helmet.</p>
 </body>
+
+<footer>
+	<a href="index.html">Bounce back to the homepage</a>
+</footer>
+
 </html>
