Mandatory Pairing Session Release 1 with Mark K

--- a/html/moon_bootz/about.html
+++ b/html/moon_bootz/about.html
@@ -7,6 +7,8 @@
 <h1>About Moon Bootz</h1>
 	<p>Moon Bootz was founded in 2016 by Bonny Notsville. We pride ourselves on delivering the best product possible.</p>
 
+<img src="images/blue_moon.jpg" alt="blue moon" />
+
 <h2> Address</h2>
 <p> 1234 Bootie Ave</p>
 <p> Des Moines, Iowa, 22222</p>
