--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -9,9 +9,9 @@
 <h1> Contact Information</h1>
 
 	<ul>
-		<li><a href="http://www.google.com">Send us an email!</a></li>
+		<li><a href="http://www.gmail.com">Send us an email!</a></li>
 		<li><a href="http://www.facebook.com">Like us on Facebook!</a></li>
-		<li><a href="htt[://www.twitter.com">Send us a tweet!</a></li>
+		<li><a href="http://www.twitter.com">Send us a tweet!</a></li>
 	</ul>
 
 <footer>
