--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -15,7 +15,7 @@
 	</ul>
 
 <footer>
-	<a href="index.html">Bounce back to the homepage</a>
+	<a href="index.html">Bounce back to the homepage...</a>
 </footer>
 
 </body>
