--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -8,8 +8,11 @@
 <h1>Product Details</h1>
 
 <h2>Features</h2>
-<p>17 Xtreme Colors</p>
-<p>Made in America</p>
+<ul>
+	<li><p>17 Xtreme Colors</p></li>
+	<li><p>Made in America</p></li>
+	<li><p>Hand Crafted</p></li>
+</ul>
 
 <h2>Sizes</h2>
 We offer all adult sizes for men and women between 5 and 14.
@@ -17,7 +20,7 @@ We offer all adult sizes for men and women between 5 and 14.
 </body>
 
 <footer>
-	<a href="index.html">Bounce back to the homepage</a>
+	<a href="index.html">Bounce back to the homepage...</a>
 </footer>
 
 </html>
