table-practice.html

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -25,12 +25,29 @@
 	</tr>
 </table>
 
-<h2>Practice Table (2.3: Release 1)</h2>
+<h1>Practice Table (2.3: Release 1)</h1>
+<table border=1>
 
+	<tr>
+		<th>Row 1</th>
+		<th>Row 2</th>
+		<th>Row 3</th>
+		<th>Row 4</th>
+		<th>Row 5</th>
+	</tr>
 
-
+	<tr>
+		<td rowspan="2">Double Row</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>Single Row</td>
+		<td>Another Row</td>
+	</tr>
+	<tr>
+		<td colspan="3">Triple-Wide Column</td>
+		<td>Tall</td>
+	</tr>
+</table>
 </body>
 
 </html>
-
-
