Incorporated spans into Athletic Conference table

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -7,20 +7,22 @@
 	<h1> Division 1 Athletic Conferences</h1>
 	<table border=1>
 		<tr>
-			<th>University</th>
 			<th>Athletic Conference</th>
+			<th>University</th>
+			<th>State</th>
 		</tr>
 		<tr>
-			<td>North Carolina</td>
-			<td>ACC</td>
-		</tr>
-		<tr>
-			<td>Rutgers</td>
-			<td>Big 10</td>
-		</tr>
-		<tr>
+			<td rowspan=2>ACC</td>
+			<td>Virgina Tech</td>
 			<td>Virginia</td>
-			<td>ACC</td>
+		</tr>
+		<tr>
+			<td colspan="2">Virginia</td>
+		</tr>
+		<tr>
+			<td>Big 10</td>
+			<td>Rutgers</td>
+			<td>New Jersey</td>
 		</tr>
 	</table>
 
