Created a page about golf, including history, players, and brands

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Golfing</title>
 </head>
-<body h1>"Hello world" 
+<body> 
+<h1>Let's go Golfing!!</h1>
+
+<p>Golf is a sport that has been around for hundreds of years. It has continued to grow in popularity in the <strong>United States</strong>, <br> most sgnificantly when Tiger Woods came on the scene. Below are some of the top brands in the sport, as well as the current Top 3 in <em>World Golf Rankings</em></p>
+
+<div>
+<h4>Golf Brands</h4>
+<ul>
+	<li>TaylorMade</li>
+	<li>Callaway</li>
+	<li>Titleist</li>
+</ul>
+</div>
+<div>
+<h4>Top 3 Ranked Players</h4>
+<ol>
+	<li>Dustin Johnson</li>
+	<li>Jason Day</li>
+	<li>Rory McIlroy</li>		
+</ol>
+<a href="http://www.pgatour.com/stats/stat.186.html">
+Official World Golf Rankings
+</a>
+</div>
 
 </body>
 </html>
