--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -17,7 +17,7 @@
   </section>
   <section id="contact-info">
     <p>287-187-3726</p>
-    <p>imoganary@gmail.com</p>
+    <p class= "email">imoganary@gmail.com</p>
     <p>123 Main Street, Anytown, USA 101010</p>
   </section>
 
@@ -25,7 +25,7 @@
     <h2 class="experience-category">Relevant Work Experience</h2>
     <section class="job">
       <h3>General Practitioner, The Circus</h3>
-      <ul class="list">
+      <ul:first-child class="list">
         <li>Wrangled flaming hula hoops</li>
         <li>Served as first assistant to trapeze team</li>
         <li class="featured">Provided quality assurance for cotton candy</li>
@@ -53,7 +53,7 @@
     <h2 class="experience-category">Volunteer Experience</h1>
     <section class="volunteer-gig">
       <h3>Little League Coach</h3>
-      <ul>
+      <ul class="list">
         <li>Led team of middle-schoolers to intense championship triumph</li>
         <li>Drove bus to Imogen's Ice Cream Shack after games</li>
       </ul>
