--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -25,7 +25,7 @@
     <h2 class="experience-category">Relevant Work Experience</h2>
     <section class="job">
       <h3>General Practitioner, The Circus</h3>
-      <ul:first-child class="list">
+      <ul:first-child class="test">
         <li>Wrangled flaming hula hoops</li>
         <li>Served as first assistant to trapeze team</li>
         <li class="featured">Provided quality assurance for cotton candy</li>
