--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
   <title>Wildflowers Article</title>
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
   <section id="external-links">
     <h1>External Links</h1>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Wildflower">Wildflowers on Wikipedia</a></li>
+      	 <span class="text">text</span>
+    	<span class="icon"><img src="images/wiki.jpg" /></span>
       <li><a href="http://www.americanmeadows.com/wildflower-seeds">Shop for Wildflower Seeds</a></li>
       <li><a href="https://www.pinterest.com/pscheen/wildflowers/">Wildflower Gallery on Pinterest</a></li>
     </ul>
