--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,22 +1,10 @@
 <!--
-Write your names here:
-1. Matthew Mayerle
-2.
-We spent [#] hours on this challenge.
--->
+1. Saham Khozestani
+2. Matthew Mayerle 
+We worked 1.25 hours on this assignment-->
 
-<!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="gps2-1.css" type="text/css">
-    <title>Git Cheat Sheet</title>
-  </head>
-
-  <body>
-    <header>
+<header>
       <h1>GitHub: Git Cheat Sheet</h1>
       <p>Git is the open source distributed version control system that
         facilitates GitHub activities on your laptop or desktop.
@@ -30,6 +18,7 @@ We spent [#] hours on this challenge.
         <p>GitHub provides desktop clients that include a graphical user
         interface for the most common repository actions and an automatically
         updating command line edition of Git for advanced scenarios.</p>
+        
         <ul>
           <li><a href="https://windows.github.com">GitHub for Windows</a></li>
           <li><a href="https://mac.github.com">GitHub for Mac</a></li>
@@ -276,6 +265,5 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
-  </body>
-</html>
+    
+<!-- I feel much more confident with positioning and the inline-block vs block ideas thanks to our guide. I felt like we were guessing when I was completing the assignments during week 3. -->
