linked css page to html file. This was deleted accidentally earlier

--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -3,13 +3,13 @@
 2. Matthew Mayerle 
 We worked 1.25 hours on this assignment-->
 
-
 <header>
       <h1>GitHub: Git Cheat Sheet</h1>
       <p>Git is the open source distributed version control system that
         facilitates GitHub activities on your laptop or desktop.
         This cheat sheet summarizes commonly used Git command line
         instructions for quick reference.</p>
+        <link rel="stylesheet" href="gps2-1.css" type="text/css">
     </header>
 
     <section class="column-1">
